@@ -362,7 +362,8 @@ class iTradeQuoteListCtrlDialog(wx.Dialog, wxl.ColumnSorterMixin):
 
         tID = wx.NewId()
         self.m_imagelist = wx.ImageList(16,16)
-        self.sm_q = self.m_imagelist.Add(wx.Bitmap('res/invalid.png'))
+        self.sm_q = self.m_imagelist.Add(wx.Bitmap('res/quote.png'))
+        self.sm_i = self.m_imagelist.Add(wx.Bitmap('res/invalid.png'))
         self.sm_up = self.m_imagelist.Add(wx.Bitmap('res/sm_up.png'))
         self.sm_dn = self.m_imagelist.Add(wx.Bitmap('res/sm_down.png'))
 
@@ -579,7 +580,10 @@ class iTradeQuoteListCtrlDialog(wx.Dialog, wxl.ColumnSorterMixin):
         for x in range(len(items)):
             key, data = items[x]
             if self.m_market==None or (self.m_market==data[4]):
-                self.m_list.InsertImageStringItem(line, data[0], self.sm_q)
+                if data[0]!='':
+                    self.m_list.InsertImageStringItem(line, data[0], self.sm_q)
+                else:
+                    self.m_list.InsertImageStringItem(line, data[0], self.sm_i)
                 self.m_list.SetStringItem(line, IDC_TICKER, data[1])
                 self.m_list.SetStringItem(line, IDC_NAME, data[2])
                 self.m_list.SetStringItem(line, IDC_PLACE, data[3])
